# analytics_tutorials

./: .env.example  .gitignore  .pre-commit-config.yaml  CONTRIBUTING.md  Makefile  QUICKSTART.md  README.md  TUTORIAL_INDEX.md  convert_to_notebooks.py  pyproject.toml  requirements.txt  setup_database.py
.github/workflows/: README.md  ci.yml
notebooks/: CONVERSION_NOTES.md  README.md
notebooks/00_getting_started/: 00_setup_and_polars_basics.ipynb
notebooks/01_beginner/: 01_lift_analysis.ipynb  02_roc_analysis.ipynb  03_regression_metrics.ipynb
notebooks/02_intermediate/: 04_model_comparison.ipynb  05_sql_integration.ipynb  06_population_testing.ipynb
notebooks/03_advanced/: 07_model_monitoring.ipynb  08_snowflake_integration.ipynb  09_end_to_end_pipeline.ipynb
tests/: README.md  test_data_generators.py  test_setup.py
tutorials/00_getting_started/: 00_setup_and_polars_basics.py  README.md
tutorials/01_beginner/: 01_lift_analysis.py  02_roc_analysis.py  03_regression_metrics.py
tutorials/02_intermediate/: 04_model_comparison.py  05_sql_integration.py  06_population_testing.py
tutorials/03_advanced/: 07_model_monitoring.py  08_snowflake_integration.py  09_end_to_end_pipeline.py
utils/: __init__.py  data_generators.py  database_helpers.py
